
- The same code is used to guess mimetypes for files uploaded to the
  files tool is now used to guess mimetypes for files uploaded as
  attachments to other content types, ie blog entries, wiki pages, et
  al.  (LP #667494)

- Added an evolve script to update mimetypes for community files with
  generic, meaningless mimetypes to something more specific based on
  file extension.  (LP #667494)

3.49 (2010-11-02)
-----------------

- Harden 'deactivate_profile.html' view against missing user (LP #669451).

- Fix 'show_profile_view' for case when user has never logged in.  (LP
  #668352)

- Suppressed "Admin" action on peopledir objects (LP #668489).

- Added evolve script to clean up logins in user database.

- Make "external" action URL detection work for HTTPS URLs (LP #661381).

- Update feed code to read unicode from config file.  (LP #663403)

- Repaired busted HTML in template used to view profile.  (LP #668350)

3.48 (2010-10-28)
-----------------

- Improve descrption-extraction utility, avoiding a bug in older libxml2
  and making it more lazy (LP #663399).

- Made '/people' objects editable TTW by administrators.  See
  https://blueprints.launchpad.net/karl3/+spec/ttw-people-configuration

- Display last login time on main profile view, using relative time via
  the 'timeago' jQuery plugin.

- Record users' last login time on their profile.  Note that this requires
  taking over control of the login form POST from the ``repoze.who`` form
  plugin.  See https://blueprints.launchpad.net/karl3/+spec/last-login-date

- Made profile's ``country`` field required, and added new ``XX`` country
  code to account for unknown / blank items.  See
  https://blueprints.launchpad.net/karl3/+spec/country-required

- Changed label of text field in calendar events to 'Description' for all
  occurrences in the user interface.  (LP #629663)

- Added attachments to calendar event alerts. (LP #629663)

- Load TinyMCE JS / CSS only on pages which need it (LP #622813).
